welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:2: error: expected start of definition
override run() {
         ^